# 1C_task

./: README.md
src/: CMakeLists.txt  autocompleter.cpp  autocompleter.h  driver.cpp  driver.h  main.cpp  parser.cpp  parser.h  test2.txt  trie.cpp  trie.h
src/tests/: test1.txt  test3.txt
